@startuml User Schema

' User Entity
entity "User" {
    + id : integer <<PK>>
    --
    first_name : string
    last_name : string
    email : string
    password : string <<SHA1>>
    role_id : integer <<FK>>
    is_instructor : boolean
    social_links : json
    biography : text
    phone : string
    address : text
    date_added : timestamp
    last_modified : timestamp
    wishlist : json
    status : boolean
    image : string
    payment_keys : json
    title : string
    skills : string
}

entity "Role" {
    + id : integer <<PK>>
    --
    name : string
    description : text
}

entity "Permission" {
    + id : integer <<PK>>
    --
    admin_id : integer <<FK>>
    permissions : json
}

entity "InstructorApplication" {
    + id : integer <<PK>>
    --
    user_id : integer <<FK>>
    document : string
    status : string
    applied_date : timestamp
    message : text
}

entity "DeviceLogin" {
    + id : integer <<PK>>
    --
    user_id : integer <<FK>>
    device_id : string
    device_name : string
    browser : string
    ip_address : string
    last_login : timestamp
    is_verified : boolean
}

' Relationships
User ||--o{ Permission
User ||--o{ InstructorApplication
User ||--o{ DeviceLogin
Role ||--o{ User

@enduml 